Added CTB & NWFB

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,13 +19,17 @@ a {
   box-sizing: border-box;
 }
 
+textarea {
+  resize: none
+}
+
 @layer components {
   .container {
     @apply rounded-xl m-3 text-white w-2/5 bg-slate-800
   }
 
   .normal-th{
-    @apply border-b text-left
+    @apply border-b text-left pb-1
   }
 
   .hover-tr {
