Update button set

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,4 +39,40 @@ a {
   .mouse-help {
     @apply hover:cursor-help
   }
+
+  .button {
+    @apply 
+    px-3
+    py-1
+    rounded-md
+    font-medium
+    text-sm 
+    text-white 
+    bg-stone-900 
+    ring-1 
+    ring-neutral-700 
+    transition ease-in-out 
+    hover:ring-sky-500/50 
+    hover:bg-sky-600 
+    hover:scale-110 
+    duration-500
+    hover:font-semibold
+  }
+
+  .button-set{
+    @apply 
+    px-3 
+    rounded-md
+    /* font-semibold  */
+    text-sm
+    font-medium
+    text-white 
+    bg-stone-900 
+    ring-neutral-700 
+    transition ease-in-out 
+    hover:ring-sky-300/80  
+    hover:scale-110 
+    duration-500
+    hover:font-semibold
+  }
 }
