--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,15 +21,19 @@ a {
 
 @layer components {
   .container {
-    @apply rounded-xl m-3 text-white w-2/5 bg-slate-800
+    @apply rounded-xl m-3 text-white w-2/5 bg-sky-700/[0.15]
   }
 
   .normal-th{
     @apply border-b text-left pb-1
   }
 
+  .selected-tr{
+    @apply bg-slate-900 cursor-pointer
+  }
+
   .hover-tr {
-    @apply hover:bg-slate-500 hover:cursor-pointer
+    @apply hover:bg-blue-900/[0.8] hover:cursor-pointer
   }
 
   .mouse-hover {
